--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         };
     stopped: 6:54 PM!
     </pre>
-    <script src="Index.js">
+    <script src="index.js">
 
     </script>
 </body>
